onepage-initial.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: onepage
  namespace: onepage
  uid: a2e3abc9-ca87-40f0-9525-64ed38b12ccc
  resourceVersion: '5244901'
  generation: 7
  creationTimestamp: '2023-01-12T16:24:10Z'
  labels:
    k8s-app: onepage
  annotations:
    deployment.kubernetes.io/revision: '1'
  managedFields:
    - manager: k8saasapi
      operation: Update
      apiVersion: apps/v1
      time: '2023-01-12T16:24:10Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:k8s-app: {}
        f:spec:
          f:progressDeadlineSeconds: {}
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:strategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
          f:template:
            f:metadata:
              f:labels:
                .: {}
                f:k8s-app: {}
              f:name: {}
            f:spec:
              f:containers:
                k:{"name":"onepage"}:
                  .: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:resources: {}
                  f:securityContext:
                    .: {}
                    f:privileged: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
              f:dnsPolicy: {}
              f:imagePullSecrets:
                .: {}
                k:{"name":"unmutedtech"}: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2023-01-12T16:45:28Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:deployment.kubernetes.io/revision: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:updatedReplicas: {}
      subresource: status
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: onepage
  template:
    metadata:
      name: onepage
      creationTimestamp: null
      labels:
        k8s-app: onepage
    spec:
      containers:
        - name: onepage
          image: registry.digitalocean.com/unmutedtech/onepage:latest
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: unmutedtech
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 7
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2023-01-12T16:24:17Z'
      lastTransitionTime: '2023-01-12T16:24:10Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "onepage-8687bb46b7" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2023-01-12T16:45:28Z'
      lastTransitionTime: '2023-01-12T16:45:28Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
