php-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onepage
  namespace: onepage
  labels:
    k8s-app: onepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onepage
      k8s-app: onepage
  template:
    metadata:
      labels:
        app: onepage
        k8s-app: onepage
    spec:
      volumes:
        - name: code
          persistentVolumeClaim:
            claimName: code
      containers:
        - name: onepage
          image: php:7.4-fpm
          volumeMounts:
            - name: code
              mountPath: /code
