itframe-redis.yaml
kind: Service
apiVersion: v1
metadata:
  name: rfs-itframe-redis
  namespace: default
  labels:
    app.kubernetes.io/component: sentinel
    app.kubernetes.io/managed-by: redis-operator
    app.kubernetes.io/name: itframe-redis
    app.kubernetes.io/part-of: redis-failover
    redisfailovers.databases.spotahome.com/name: itframe-redis
spec:
  ports:
    - name: sentinel
      protocol: TCP
      port: 26379
      targetPort: 6379
  selector:
    app.kubernetes.io/component: sentinel
    app.kubernetes.io/name: itframe-redis
    app.kubernetes.io/part-of: redis-failover
  type: LoadBalancer
