photon_initial.yml
kind: Service
apiVersion: v1
metadata:
  name: photon
  namespace: default
  uid: 3d6fc3e5-ea59-45ce-9202-5c10e2d786c8
  resourceVersion: '3472183'
  creationTimestamp: '2023-01-09T16:25:34Z'
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"photon","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":8080}],"selector":{"k8s-app":"photon"},"type":"LoadBalancer"}}
    kubernetes.digitalocean.com/load-balancer-id: d3ad62d2-c294-4283-9d25-ce59be3108c5
  finalizers:
    - service.kubernetes.io/load-balancer-cleanup
  managedFields:
    - manager: digitalocean-cloud-controller-manager
      operation: Update
      apiVersion: v1
      time: '2023-01-09T16:25:34Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:finalizers:
            .: {}
            v:"service.kubernetes.io/load-balancer-cleanup": {}
      subresource: status
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: v1
      time: '2023-01-09T16:25:34Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:allocateLoadBalancerNodePorts: {}
          f:externalTrafficPolicy: {}
          f:internalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":80,"protocol":"TCP"}:
              .: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector: {}
          f:sessionAffinity: {}
          f:type: {}
    - manager: digitalocean-cloud-controller-manager
      operation: Update
      apiVersion: v1
      time: '2023-01-09T16:25:37Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:kubernetes.digitalocean.com/load-balancer-id: {}
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31702
  selector:
    k8s-app: photon
  clusterIP: 10.245.107.184
  clusterIPs:
    - 10.245.107.184
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  allocateLoadBalancerNodePorts: true
  internalTrafficPolicy: Cluster
status:
  loadBalancer: {}
