photon_update.yml
kind: Service
apiVersion: v1
metadata:
  name: photon
  namespace: default
  finalizers:
    - service.kubernetes.io/load-balancer-cleanup
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    k8s-app: photon
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  allocateLoadBalancerNodePorts: true
  internalTrafficPolicy: Cluster
status:
  loadBalancer:
    ingress:
      - ip: 157.245.28.94
