ingress-itframe.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: itframe-ingress
  namespace: default
  generation: 1
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - itframe.unmutedte.ch
      secretName: itframe-tls
  rules:
    - host: itframe.unmutedte.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itframe
                port:
                  number: 80
status:
  loadBalancer:
    ingress:
      - ip: 157.245.28.94
